--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,11 @@ version: '3.8'
 services:
   fastapi_server:
     container_name: fastapi_server
-    image: jrtec/fastapi-alembic-sqlmodel-async:latest
+    # image: jrtec/fastapi-alembic-sqlmodel-async:latest
+    build: ./backend
     restart: always
-    command: "sh -c 'alembic upgrade head && python app/initial_data.py && gunicorn -w 3 -k uvicorn.workers.UvicornWorker app.main:app  --bind 0.0.0.0:8008 --preload --log-level=debug --timeout 120'"
+    #command: "sh -c 'alembic upgrade head && python app/initial_data.py && gunicorn -w 3 -k uvicorn.workers.UvicornWorker app.main:app  --bind 0.0.0.0:8008 --preload --log-level=debug --timeout 120'"
+    command: "sh -c 'alembic upgrade head && uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 8008'"
     volumes:
       - ./backend/app:/code
     expose:
